<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/header"
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/greeting"
            style="@style/greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_enter_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="submitName"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_question1"
            style="@style/customTextQuestion"
            android:text="@string/question1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q1_ans1"
                style="@style/checkBox"
                android:text="@string/dbms" />

            <CheckBox
                android:id="@+id/q1_ans2"
                style="@style/checkBox"
                android:text="@string/javascript" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q1_ans3"
                style="@style/checkBox"
                android:text="@string/ui_ux" />

            <CheckBox
                android:id="@+id/q1_ans4"
                style="@style/checkBox"
                android:text="@string/phython" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_question2"
            style="@style/customTextQuestion"
            android:text="@string/question2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q2_ans1"
                style="@style/checkBox"
                android:text="@string/_Spreadsheets" />

            <CheckBox
                android:id="@+id/q2_ans2"
                style="@style/checkBox"
                android:text="@string/enterprise_database" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q2_ans3"
                style="@style/checkBox"
                android:text="@string/nosql_database" />

            <CheckBox
                android:id="@+id/q2_ans4"
                style="@style/checkBox"
                android:text="@string/point_db" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_question3a"
                style="@style/customTextQuestion3a"
                android:text="@string/_3" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_answer"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/text_question3b"
                style="@style/customTextQuestion3b" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_question3c"
            style="@style/customTextQuestion3c" />


        <TextView
            android:id="@+id/text_question4"
            style="@style/customTextQuestion"
            android:layout_marginBottom="16dp"
            android:text="@string/question4" />

        <RadioGroup
            android:id="@+id/radio_group_questionfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_true_rightAnswer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/_true"
                android:textColor="@color/soft_black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_false_wrongAnswer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/_false"
                android:textColor="@color/soft_olive"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_question5"
            style="@style/customTextQuestion"
            android:text="@string/question5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q5_ans1"
                style="@style/checkBox"
                android:text="@string/photoshop"

                />

            <CheckBox
                android:id="@+id/q5_ans2"
                style="@style/checkBox"
                android:text="@string/spreadsheets" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q5_ans3"
                style="@style/checkBox"
                android:text="@string/illustrator" />


            <CheckBox
                android:id="@+id/q5_ans4"
                style="@style/checkBox"
                android:text="@string/no_sql" />

        </LinearLayout>


        <Button
            android:id="@+id/submit_test"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="onClickSubmit"
            android:text="@string/onsubmit"
            android:textAllCaps="true"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>